# django_docker_template

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
config/: db.sqlite3  urls.py
config/settings/: .env  base.py
config/static/css/: output.css
config/templates/: _base.html  _dashboard_layout.html
config/templates/partials/: _sidebar.html
dashboard/: views.py
dashboard/templates/dashboard/: index.html
dashboard/templates/partials/: chart-01.html  chart-02.html
home/: views.py
home/templates/: index.html
nginx/: nginx.conf
static/CACHE/: manifest.json
static/src/: output.css
