[tool.poetry]
name = "django-docker-template"
version = "0.1.0"
description = ""
authors = ["Eugene Park <parkeugene7676@gmail.com>"]
readme = "README.md"
packages = [{include = "django_docker_template"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"
whitenoise = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
